<resources>
    <string name="app_name">Converter</string>
    <string name="back_btn_desc">Back</string>
    <string name="time_title">Time</string>
    <string name="data_title">Data</string>
    <string name="speed_title">Speed</string>
    <string name="volume_title">Volume</string>
    <string name="dialog_selected_item">selected item from the dialog box</string>
    <string name="currency_card">Currency</string>
    <string name="app_title">Converter</string>
    <string name="gst_card">GST</string>
    <string name="bmi_card">BMI</string>
    <string name="temperature_card">Temperature</string>
    <string name="speed_card">Speed</string>
    <string name="numeral_system_card">Numeral System</string>
    <string name="volume_card">Volume</string>
    <string name="discount_card">Discount</string>
    <string name="date_card">Date</string>
    <string name="data_card">Data</string>
    <string name="finance_card">Finance</string>
    <string name="time_card">Time</string>
    <string name="area_card">Area</string>
    <string name="mass_card">Mass</string>
    <string name="length_card">Length</string>
    <string name="temperature_title">Temperature</string>
    <string name="discount_title">Discount</string>
    <string name="temperatureFirstListViewText">Celsius</string>
    <string name="temperatureFirstListViewCodeSymbol">°C</string>
    <string name="temperatureFirstListViewValue">1</string>
    <string name="temperatureSecondListViewCode">°F</string>
    <string name="temperatureSecondListViewValue">33.8</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_00">00</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">⌫</string>
    <string name="btn_plus_minus">+/-</string>
    <string name="temperatureSecondListView">Fahrenheit</string>
    <string name="list_specifier_symbol">list_specifier</string>
    <string name="discount_savedValue">You save 10</string>
    <string name="discountThirdTextViewValue">90</string>
    <string name="discountThirdTextView">Final price</string>
    <string name="discountSecondTextViewValue">10</string>
    <string name="discountSecondTextView">Discount (%)</string>
    <string name="discountFirstListViewValue">100</string>
    <string name="discountFirstListView">Original price</string>
    <string name="discountFirstTextViewValue">100</string>
    <string name="date_title">Date</string>
    <string name="dateFromTextView">From</string>
    <string name="dateFromValue">December 28, 2024</string>
    <string name="dateToTextView">To</string>
    <string name="dateToValue">December 28, 2024</string>
    <string name="difference">Difference</string>
    <string name="days_value">0</string>
    <string name="months_value">0</string>
    <string name="years_value">0</string>
    <string name="years_textview">Years</string>
    <string name="months_textview">Months</string>
    <string name="days_textview">Days</string>
    <string name="bottom_sheet_title">Title</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
    <string name="length_title">Length</string>
    <string name="finance_title">Finance</string>
    <string name="hint_enter_amount">Enter amount</string>
    <string name="finance_type_principal">Principal</string>
    <string name="finance_type_investment">Total Investment</string>
    <string name="finance_loan_rb">Loan</string>
    <string name="finance_investment_rb">Investment</string>
    <string name="finance_duration">1 year and 0 months</string>
    <string name="tv_duration">Duration</string>
    <string name="tv_duration_dialog">1 year and 0 months</string>
    <string name="tv_investment_type">Investment type</string>
    <string name="btn_calculate">Calculate</string>
    <string name="hint_interest_rate">4.85</string>
    <string name="interest_rate">4.85</string>
    <string name="tv_interest_rate">Interest rate (%)</string>
    <string name="duration_bottom_sheet_title">Duration</string>
    <string name="tv_years">Years</string>
    <string name="tv_months">Months</string>
    <string name="finance_compound_interest_rb">Compound Interest</string>
    <string name="finance_simple_interest_rb">Simple Interest</string>
    <string name="resultCard_totalInterestValue">totalInterestValue</string>
    <string name="resultCard_total_interest_tv">Total Interest</string>
    <string name="resultCard_dot">•</string>
    <string name="resultCard_totalPrincipal">Total principal</string>
    <string name="resultCard_totalInvestment">Total investment</string>
    <string name="resultCard_totalPrincipalValue">totalPrincipalValue</string>
    <string name="resultCard_financeTypeTotal_tv">Total FinanceType</string>
    <string name="resultCard_totalPaymentValue">totalPaymentValue</string>
    <string name="resultCard_totalPayment_tv">Total payment</string>
    <string name="resultCard_calculatedAmount">Calculated Amount</string>
    <string name="resultCard_duration_tv">duration</string>
    <string name="resultCard_title_tv">Title</string>
    <string name="details_title">Details</string>
    <string name="btn_back">Back</string>
    <string-array name="investment_types">
        <item>One-time</item>
        <item>Recurring</item>
    </string-array>
    <string name="bmi_title">BMI</string>
    <string name="tv_age">Age</string>
    <string name="tv_gender">Gender:</string>
    <string name="tv_genderName">Male</string>
    <string name="gender_male_value">Male</string>
    <string name="gender_female_value">Female</string>
    <string name="hint_enter_age">Enter age</string>
    <string name="tv_height">Height (cm)</string>
    <string name="hint_enter_height">Enter height</string>
    <string name="tv_weight">Weight (kg)</string>
    <string name="hint_enter_weight">Enter Weight</string>
    <string name="tv_about_bmi">About BMI</string>
    <string name="tv_about_bmi_desc">
        "Body mass index (BMI) is a person's weight in kilograms divided by the square of height in meters. BMI is an easy screening method for weight category
    </string>
    <string name="bmi_result_activity_title">Your current BMI</string>
    <string name="areaFirstListView">Square yard</string>
    <string name="areaFirstListViewCode">yd²</string>
    <string name="areaFirstListViewValue">1</string>
    <string name="areaSecondListView">Square foot</string>
    <string name="areaSecondListViewCode">ft²</string>
    <string name="areaSecondListViewValue">9</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equals">=</string>
    <string name="area_title">Area</string>
    <string name="lengthTitle">Length</string>
    <string name="gst_title">GST</string>
    <string name="tv_originalPrice">Original Price</string>
    <string name="tv_originalPriceValue">100</string>
    <string name="gst_3Percent">3﹪</string>
    <string name="gst_5Percent">5﹪</string>
    <string name="gst_12Percent">12﹪</string>
    <string name="gst_18Percent">18﹪</string>
    <string name="gst_28Percent">28﹪</string>
    <string name="tv_final_price">Final price</string>
    <string name="tv_final_price_value">105</string>
    <string name="tv_cgst_sgst_value">CGST/SGST: 2.5</string>
    <string name="numerals_title">Numeral System</string>
    <string name="numeralsFirstListView">Octal</string>
    <string name="numeralsFirstListViewCode">OCT</string>
    <string name="numeralsFirstListViewValue">1</string>
    <string name="numeralsSecondListView">Decimal</string>
    <string name="numeralsSecondListViewCode">DEC</string>
    <string name="numeralsSecondListViewValue">1</string>
    <string name="btn_f">F</string>
    <string name="btn_e">E</string>
    <string name="btn_d">D</string>
    <string name="btn_c">C</string>
    <string name="btn_b">B</string>
    <string name="body_mass_index_tv">Body mass index</string>
    <string name="bmi_result">19.9</string>
    <string name="bmi_status_chip">Normal</string>
    <string name="bmi_bounds_18_5">18.5</string>
    <string name="bmi_bounds_24_0">24.0</string>
    <string name="bmi_bounds_28_0">28.0</string>
    <string name="underweight_tv">■ Underweight</string>
    <string name="normal_tv">■ Normal</string>
    <string name="overweight_tv">■ Overweight</string>
    <string name="obese_tv">■ Obese</string>
    <string name="analysis_tv">Analysis</string>
    <string name="height_cm_tv">Height (cm)</string>
    <string name="height_value_tv">172.0</string>
    <string name="suggested_weight_tv">Suggested weight (kg)</string>
    <string name="suggested_weight_value_tv">54.7 ~ 71.0</string>
    <string name="bmi_advice_tv">Advice</string>
    <string name="btn_a">A</string>
    <string name="force_title">Force</string>
    <string name="speedFirstListView">Meter per second</string>
    <string name="speedFirstListViewCode">m/s</string>
    <string name="speedFirstListViewValue">1</string>
    <string name="speedSecondListView">Kilometer per hour</string>
    <string name="speedSecondListViewCode">km/h</string>
    <string name="speedSecondListViewValue">3.6</string>
    <string name="dataFirstListView">Megabyte</string>
    <string name="dataFirstListViewCode">MB</string>
    <string name="dataFirstListViewValue">1</string>
    <string name="dataSecondListView">Kilobyte</string>
    <string name="dataSecondListViewCode">KB</string>
    <string name="dataSecondListViewValue">1024</string>
    <string name="volumeSecondListValue">1000000</string>
    <string name="volumeSecondListViewCode">cm</string>
    <string name="volumeSecondListView">Cubic centimeter</string>
    <string name="volumeFirstListViewValue">1</string>
    <string name="volumeFirstListViewCode">m</string>
    <string name="volumeFirstListView">Cubic meter</string>
    <string name="timeFirstListView">Minute</string>
    <string name="timeFirstListViewCode">min</string>
    <string name="timeFirstListViewValue">1</string>
    <string name="timeSecondListView">Second</string>
    <string name="timeSecondListViewCode">s</string>
    <string name="timeSecondListViewValue">60</string>
    <string name="massTitle">Mass</string>
    <string name="massFirstListView">Gram</string>
    <string name="massFirstListViewCode">g</string>
    <string name="massFirstListViewValue">1</string>
    <string name="massSecondListView">Kilogram</string>
    <string name="massSecondListViewCode">kg</string>
    <string name="massSecondListViewValue">0.001</string>
    <string name="lengthFirstListView">Meter</string>
    <string name="lengthFirstListViewCode">m</string>
    <string name="lengthFirstListViewValue">1</string>
    <string name="lengthSecondListView">Kilometer</string>
    <string name="lengthSecondListViewCode">km</string>
    <string name="lengthSecondListViewValue">0.001</string>
    <string name="force_card">Force</string>
    <string name="energy_card">Energy</string>
    <string name="pressure_card">Pressure</string>
    <string name="forceFirstListView">Newtons</string>
    <string name="forceFirstListViewCode">N</string>
    <string name="forceFirstListViewValue">1</string>
    <string name="forceSecondListView">Pound force</string>
    <string name="forceSecondListViewCode">lbf</string>
    <string name="forceSecondListViewValue">0.224809</string>
    <string name="energy_title">Energy</string>
    <string name="energyFirstListView">Kilowatt hours</string>
    <string name="energyFirstListViewCode">kWh</string>
</resources>