<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finance_result_layout"
    android:padding="16dp"
    android:background="@color/off_white">

    <RelativeLayout
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/back_btn_desc"
            android:focusable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingStart="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/details_title"
            android:textColor="#000000"
            android:textSize="25sp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="353dp"
        android:layout_height="406dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/details_toolbar"
        app:layout_constraintVertical_bias="0.294">

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="412dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultCard_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/resultCard_title_tv"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resultCard_duration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/resultCard_duration_tv"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resultCard_calculatedAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/resultCard_calculatedAmount"
                android:textColor="@color/orange"
                android:textSize="30sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/resultCard_totalPayment_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultCard_totalPayment_tv" />

            <TextView
                android:id="@+id/resultCard_totalPaymentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultCard_totalPaymentValue"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:progress="30"
                android:progressTint="#008080"
                android:secondaryProgress="100"
                android:secondaryProgressTint="@color/orange"
                android:secondaryProgressTintMode="screen" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalPrincipalValue_dot"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:text="@string/resultCard_dot"
                    android:textColor="#008080"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/financeTypeTotal_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="39dp"
                    android:layout_toEndOf="@+id/totalPrincipalValue_dot"
                    android:text="@string/resultCard_financeTypeTotal_tv" />

                <TextView
                    android:id="@+id/resultCard_totalPrincipalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:text="@string/resultCard_totalPrincipalValue"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalInterestValue_dot"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:text="@string/resultCard_dot"
                    android:textColor="@color/orange"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="39dp"
                    android:layout_toEndOf="@+id/totalInterestValue_dot"
                    android:text="@string/resultCard_total_interest_tv" />

                <TextView
                    android:id="@+id/resultCard_totalInterestValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="24dp"
                    android:text="@string/resultCard_totalInterestValue"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>